Add Matheclipse integration and helper methods for equation solving
- Introduced MatheclipseHelper class for managing equations and unknowns.
- Implemented methods for adding equations, solving systems, simplifying expressions, and retrieving results.
- Updated build.gradle and dependencies.gradle to include Matheclipse dependency.
- Added unit tests for MatheclipseHelper functionality.